--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "express-starter",
+  "name": "express-ts",
   "version": "0.0.1",
-  "description": "Simple Express with Typescript application",
-  "main": "index.js",
+  "description": "Express ts web framework",
+  "main": "bootstrap.js",
   "author": "MohammadRasul Alizadeh<mohammadr.alizadeh@live.com>",
   "repository": {
     "type": "git",
@@ -12,16 +12,32 @@
     "build": "npx tsc",
     "build:watch": "npx tsc -w",
     "dev": "npx nodemon",
-    "start": "node dist/index.js"
+    "start": "node dist/bootstrap.js"
   },
   "license": "MIT",
   "dependencies": {
-    "express": "^4.17.1"
+    "body-parser": "^1.19.0",
+    "dotenv": "^8.2.0",
+    "eslint-plugin-vue": "^7.5.0",
+    "express": "^4.17.1",
+    "express-vue": "^5.16.0",
+    "inversify": "^5.0.5",
+    "inversify-express-utils": "^6.3.2",
+    "lodash": "^4.17.20",
+    "mongoose": "^5.11.15",
+    "mysql": "^2.18.1",
+    "pg": "^8.5.1",
+    "reflect-metadata": "^0.1.13",
+    "sqlite3": "4.1.1",
+    "typeorm": "^0.2.31"
   },
   "devDependencies": {
     "@types/cors": "^2.8.9",
+    "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.11",
+    "@types/glob": "^7.1.3",
     "@types/jest": "^26.0.20",
+    "@types/lodash": "^4.14.168",
     "@types/node": "^14.14.22",
     "@typescript-eslint/eslint-plugin": "^4.14.2",
     "@typescript-eslint/parser": "^4.14.2",
